Refactored index.html, navlinks

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,6 +355,11 @@ h6 {
   margin-right: 15px;
 }
 
+.project-link:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
 .project1 {
   background: url(../images/rethja-clothing.png) no-repeat 50% 50%;
   background-size: cover;
@@ -388,6 +393,25 @@ h6 {
   display: block;
   top: 8%;
   left: 105%;
+  right: 0;
+  bottom: 0;
+}
+
+.project3 {
+  background: url(../images/portfolio.png) no-repeat 50% 50%;
+  background-size: cover;
+  border: 1px solid #fff;
+}
+
+.portfolio3::after {
+  content: 'rethja clothing.';
+  font-family: 'Roboto Mono';
+  font-size: 36px;
+  position: relative;
+  color: #fff;
+  display: block;
+  top: 8%;
+  left: -35%;
   right: 0;
   bottom: 0;
 }
@@ -471,6 +495,12 @@ h6 {
 .footer-link {
   color: #fff;
   text-decoration: none;
+}
+
+.footer-link:hover {
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
 }
 
 #media,
