--- a/public/css/style.css
+++ b/public/css/style.css
@@ -296,6 +296,17 @@ h6 {
   text-align: center;
 }
 
+.resume {
+  color: #fff;
+  text-decoration: none;
+}
+
+.resume:hover {
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+}
+
 .container-fluid {
   width: 95%;
   margin: 0 auto;
